tests/org.eclipse.php.core.tests/workspace/errors/php7/yieldOnlyInFunction1.pdtt
--TEST--
Test unfinished try statement error reporting
--FILE--
<?php
$x = [];
yield $x;
?>
--EXPECT--
[line=3, start=15, end=23] syntax error, the yield expression can only be used inside a function
